<resources>
    <string name="app_name">Enjoy Sharing</string>
    <string name="service_url">http://2.33.153.203:8080/EnjoySharingWeb/</string>
    <!-- Strings related to login -->
    <string name="txtBoxEmail">Email</string>
    <string name="txtBoxPassword">Password</string>
    <string name="btnLogin">Connetti</string>
    <string name="btnRegister">Registrati</string>
    <string name="error_invalid_email">Indirizzo email non valido</string>
    <string name="error_invalid_password">Password troppo corta</string>
    <string name="error_incorrect_password">Password non corretta</string>
    <string name="error_field_required">Campo obbligatorio</string>
    <string name="permission_rationale">"Per usare il completamento automatico è richiesto
        l'accesso ai contatti."
    </string>
    <string name="title_activity_home">EnjoySharing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Impostazioni</string>

    <string name="txtRequestRecived">ha chiesto di partecipare all\'evento</string>
    <string name="txtMultiRequestRecived">hanno chiesto di partecipare all\'evento</string>
    <string name="txtRequestPartecipate">Partecipa</string>
    <string name="txtRequestPartecipateReverse">Annulla richiesta</string>
    <string name="txtRequestPartecipateReversed">Richiesta annullata</string>
    <string name="txtConfirmRequest">Accetta tutti</string>
    <string name="txtDeclineRequest">Rifiuta tutti</string>
    <string name="txtConfirmedRequest">Tutte le richieste accettate</string>
    <string name="txtDeclinedRequest">Tutte le richieste rifiutate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Impostazioni</string>
</resources>
