<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="enjoysharing.enjoysharing.Activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="@style/EnjoySharingProgressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="495dp" />

    <FrameLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20pt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:layout_marginTop="15pt"
                android:layout_marginBottom="20pt"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/txtBoxEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:hint="@string/txtBoxEmail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10pt">

                <EditText
                    android:id="@+id/txtBoxPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:layout_marginTop="5pt"
                    android:hint="@string/txtBoxPassword"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorLink="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/chcBoxRememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5pt"
                android:layout_marginStart="5pt"
                android:layout_marginTop="15pt"
                android:buttonTint="@color/grey_dark"
                android:text="@string/chcBoxRememberMe"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginTop="20pt"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/EnjoySharingButtonLightStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="2pt"
                    android:layout_weight="5"
                    android:text="@string/btnRegister"
                    android:textColor="@color/baseColorDark"
                    tools:layout_editor_absoluteY="288dp" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/EnjoySharingButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2pt"
                    android:layout_weight="5"
                    android:text="@string/btnLogin"
                    tools:layout_editor_absoluteY="269dp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
